--- a/Admin.MVCWebUI/Views/SlabsAndTariffs/SlabsEdit.cshtml
+++ b/Admin.MVCWebUI/Views/SlabsAndTariffs/SlabsEdit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit Slab Tariff</h2>
 
-<form id="editSlabForm">
+<form id="editSlabForm" class="mb-6" style="padding-bottom: 100px;">
     <!-- Hidden Fields -->
     <input type="hidden" id="SlabTariffId" value="@Model.SlabTariffId" />
     <input type="hidden" id="CategoryId" value="@Model.CategoryId" />
@@ -70,7 +70,7 @@
 
 @*     <button type="button" id="btnUpdateSlab" class="btn btn-success">Update</button>
  *@
-    <div class="form-group mt-4">
+    <div class="form-group">
     <button type="button" id="btnUpdateSlab" class="btn btn-success">Update</button>
         <button type="button" onclick="history.back();" class="btn btn-secondary ml-2">Back</button>
     </div>
